--- a/UI/UI/src/app/pages/category/category-list/category-list.component.html
+++ b/UI/UI/src/app/pages/category/category-list/category-list.component.html
@@ -1,7 +1,7 @@
 <app-sidebar></app-sidebar>
 <div class="mode-content">
   <div class="container-fluid mt-5">
-    <form [formGroup]="categoryForm"  (ngSubmit)="onFormSubmit(categoryForm.value)"> 
+    <form [formGroup]="categoryForm"  (ngSubmit)="onFormSubmit()"> 
      <div class="row">
        <table class="table">
         <tr>
