--- a/UI/UI/src/app/pages/category/category-details/category-details.component.html
+++ b/UI/UI/src/app/pages/category/category-details/category-details.component.html
@@ -1,23 +1,22 @@
-
 <app-sidebar></app-sidebar>
-
 <div class="mode-content">
-  <div class="container mt-5">
-<p>category-details works!</p>
-
-<div class="modal-body">
-    <form [formGroup]="addForm">
-      <div class="form-group">
-           <label for="categoryName">Name</label>
-           <input type="text"  class="form-control" 
-             formControlName="name" name="categoryName" placeholder="enter name">
+  <div class="container-fluid mt-5">
+      <div class="card  border-dark mb-3 bg-light" style="width: 50%;">
+        <div class="card-body text-info  ">
+          <h5 class="card-title">View Category </h5>
+          
+          <p class="card-text"> <label><strong>ID:</strong></label> {{  categorydata .id}}</p>
+        </div>
+        <ul class="list-group list-group-flush text-info">
+          <li class="list-group-item">
+              <label><strong>Name:</strong></label> {{categorydata .name}}
+            </li>
+         
+        </ul>
+        <div class="card-body">
+            <a href="#" routerLink="/category-list" class=" card-link btn btn-primary">Back</a>
+        </div>
       </div>
+</div>
+</div>
 
-  <div class="modal-footer">
-    <button type="submit" class="btn btn-outline-dark" onclick="goBack()" >back</button>
-  </div>
-  </form>
-  </div>
-  </div>
-  </div>
-  
